k8s/app/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    environment: dev
